deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
